--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@ footer {
     #spotsLeft {
     text-align: center;
     display: flex; /* Use flex to center text */
-    justify-content: center; /* Horizontally centers content */
+    /*justify-content: center; /* Horizontally centers content */
     align-items: center; /* Ensures vertical centering */
     margin-top: 10px;
     font-size: 18px;
