--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ footer {
     /*display: flex; /* Use flex to center text */
     /*justify-content: center; /* Horizontally centers content */
     align-items: center; /* Ensures vertical centering */
-    margin-top: 10px;
+    /*margin-top: 10px;*/
     font-size: 18px;
     font-weight: bold;
     color: red;
