--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Manrope", serif;
     text-align: center;
     background-color: #fff;
     color: #000;
