Updated font styles.css

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,16 @@ body {
     color: #000;
 }
 
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 200 to 800
+
+.manrope-font {
+  font-family: "Manrope", serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
+
 /* HEADER */
 header {
     display: flex;
