--- a/styles.css
+++ b/styles.css
@@ -243,8 +243,8 @@ footer {
 
     #spotsLeft {
     text-align: center;
-    /*display: flex; /* Use flex to center text */
-    /*justify-content: center; /* Horizontally centers content */
+    display: flex; /* Use flex to center text*/
+    justify-content: center; /* Horizontally centers content*/
     align-items: center; /* Ensures vertical centering */
     /*margin-top: 10px;*/
     font-size: 18px;
